--- a/css/articulos.less
+++ b/css/articulos.less
@@ -1,9 +1,9 @@
 .articulo--principal{
     max-width: 660px;
     margin: 0 auto;
-    line-height: @fuente-base + 10%;
+    line-height: @fuente-base + 10;
     &__intro{
-        font-size: @fuente-base + 8%;
+        font-size: @fuente-base + 8;
     }
     h2 {
         margin: 40px 0 40px 0;
