--- a/css/intros.less
+++ b/css/intros.less
@@ -4,6 +4,8 @@
     padding: 10px;
     margin: 0 auto;
     position: relative;
+    background-color: @color-claro;
+    .sobra-caja;
     &__imagen{
         width: 1320px;
         position: absolute;
@@ -26,8 +28,7 @@
     }
 
     &__categoria{
-        font-family: @fuente2;
-        text-transform: uppercase;
+        .Oswald;
         color: fade(@color-claro, 50%);
 
     }
@@ -35,7 +36,7 @@
     &__titulo{
         font-family: @fuente2;
         text-transform: uppercase;
-        font-size: 50px;
+        .fuente(50px);
     }
 
     &__autor{
