--- a/css/globales.less
+++ b/css/globales.less
@@ -6,6 +6,21 @@
 @fuente2: 'Oswald', sans-serif;
 @fuente-base: 18px;
 
+.sobra-caja {
+    box-shadow: 0px 5px 15px 0px fade(@color-primario, 50%);
+}
+
+.Oswald {
+    font-family: @fuente2;
+    text-transform: uppercase;
+    font-weight: 700;
+}
+
+.fuente(@font-size){
+    font-size: @font-size;
+    line-height: @font-size + 10;
+}
+
 *{
     box-sizing: border-box;
 }
@@ -14,12 +29,12 @@ body{
     margin: 0;
     font-family: @Fuente1;
     color: @color-primario;
+    .fuente(@fuente-base);
     
 }
 
 h1,h2,h3 {
     margin: 0;
-    font-family: @fuente2;
-    text-transform: uppercase;
+    .Oswald;
 
 }
